# tainan-address-system

./: .env.example  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/endpoints/: __init__.py  address.py  health.py
backend/app/core/: __init__.py  config.py  database.py
backend/app/models/: __init__.py  address.py
backend/app/schemas/: __init__.py  address.py
backend/app/services/: __init__.py  address_service.py
backend/app/utils/: __init__.py  data_import.py
frontend/: .env.local.example  package-lock.json  package.json
frontend/components/: AddressSearch.tsx  AddressTable.tsx  Layout.tsx  MapViewer.tsx  SummaryCard.tsx
frontend/hooks/: AddressSearch.ts
frontend/services/: api.ts  types.ts
