[project]
name = "tainan-address-backend"
version = "1.0.0"
description = "臺南市門牌坐標查詢系統後端 API"
authors = [
    { name = "Pi Chiu", email = "rtchiou@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"
keywords = ["fastapi", "taiwan", "address", "gis", "tainan"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    # FastAPI 和相關依賴
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    
    # 資料庫相關
    "sqlalchemy==2.0.23",
    "psycopg[binary,pool]>=3.1.0",
    "alembic==1.12.1",
    "geoalchemy2==0.14.2",
    
    # Pydantic 和設定
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    
    # 資料處理
    "pandas==2.1.4",
    "numpy==1.26.0",
    
    # 工具和日誌
    "tqdm==4.66.1",
    "python-dotenv==1.0.0",
    
    # 生產環境依賴
    "gunicorn==21.2.0",
    
    # 地理空間處理
    "pyproj",
]

[project.optional-dependencies]
dev = [
    # 開發和測試依賴
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "pytest-cov",
    
    # 程式碼品質
    "black",
    "isort",
    "flake8",
    "mypy",
    "pre-commit",
    
    # 開發工具
    "ipython",
    "jupyter",
]

test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "httpx==0.25.2",
    "pytest-cov",
]

lint = [
    "black",
    "isort", 
    "flake8",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/pichiu/tainan-address-system"
Repository = "https://github.com/pichiu/tainan-address-system.git"
Issues = "https://github.com/pichiu/tainan-address-system/issues"
Documentation = "https://github.com/pichiu/tainan-address-system#readme"

[project.scripts]
tainan-address-server = "app.main:main"
tainan-data-import = "app.utils.data_import:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.metadata]
allow-direct-references = true

# ================================
# 開發工具配置
# ================================

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | alembic/versions
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]
skip = ["alembic/versions"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "geoalchemy2.*",
    "psycopg2.*",
    "tqdm.*",
    "pyproj.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/alembic/versions/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# ================================
# UV 配置
# ================================

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1", 
    "httpx>=0.25.2",
    "pytest-cov",
    "black",
    "isort",
    "flake8", 
    "mypy",
    "pre-commit",
    "ipython",
    "jupyter",
]

[tool.uv.sources]
# 可以在這裡指定特定包的來源，如果需要的話